--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -1,73 +1,87 @@
 extends layout
 
 block content
-	.row.banner
-		.col-12
-			h1 Burgerking
-	.row
-		.col-12.col-lg-9
-			.row
-				.col-12.col-md-6
-					p.rating
-						i.fas.fa-star
-						i.fas.fa-star
-						i.fas.fa-star
-						i.far.fa-star
-						i.far.fa-star
-					p 125 High Street, Reading, RG6 1PS
-					.card.card-primary
-						.card-block
-							h2.card-title Opening hours
-							p.card-text Monday - Friday : 7:00am - 7:00pm
-							p.card-text Saturday : 8:00am - 5:00pm
-							p.card-text Sunday : closed
-					.card.card-primary
-						.card-block
-							h2.card-title Facilities
-							span.badge.badge-warning
-								i.fa.fa-check
-								| Hot drinks
-							span.badge.badge-warning
-								i.fa.fa-check
-								| Food
-							span.badge.badge-warning
-								i.fa.fa-check
-								| Premium wifi
-				.col-12.col-md-6.location-map
-					.card.card-primary
-						.card-block
-							h2.card-title Location map
-							img.img-fluid.rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2&key=<API Key>')
-			.row
-				.col-12
-					.card.card-primary.review-card
-						.card-block
-							a.btn.btn-primary.float-right(href='/location/review/new') Add review
-							h2.card-title Customer reviews
-							.row.review
-								.col-12.no-gutters.review-header
-									span.rating
-										i.fas.fa-star
-										i.fas.fa-star
-										i.fas.fa-star
-										i.far.fa-star
-										i.far.fa-star
-									span.review Author Simon Holmes
-									small.review Timestamp 16 February 2017
-								.col-12
-									p What a great place.
-							.row.review
-								.col-12.no-gutters.review-header
-									span.rating
-										i.fas.fa-star
-										i.fas.fa-star
-										i.fas.fa-star
-										i.far.fa-star
-										i.far.fa-star
-									span.reviewAuthor Charlie Chaplin
-									small.reviewTimestamp 14 February 2017
-								.col-12
-									p It was okay. Coffee wasn't great.
-		.col-12.col-lg-3
-			p.lead Starcups is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
-			p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+  .row.banner
+    .col-12
+      h1 Starcups
+      p.rating
+        i.fas.fa-star
+        i.fas.fa-star
+        i.fas.fa-star
+        i.far.fa-star
+        i.far.fa-star
+      p 125 High Street, Reading, RG6 1PS
+
+  .row
+    .col-12.col-lg-9
+      .row
+        .col-12.col-md-6
+          .card.card-primary
+            .card-block
+              h2.card-title Opening hours
+              p.card-text Monday - Friday : 7:00am - 7:00pm
+              p.card-text Saturday : 8:00am - 5:00pm
+              p.card-text Sunday : closed
+
+          .card.card-primary
+            .card-block
+              h2.card-title Facilities
+              span.badge.badge-warning
+                i.fa.fa-check
+                |  Hot drinks
+              span.badge.badge-warning
+                i.fa.fa-check
+                |  Food
+              span.badge.badge-warning
+                i.fa.fa-check
+                |  Premium wifi
+
+        .col-12.col-md-6.location-map
+          .card.card-primary
+            .card-block
+              h2.card-title Location map
+              iframe(
+                width="100%" 
+                height="250" 
+                frameborder="0" 
+                style="border:0" 
+                allowfullscreen
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.5500900511453!2d-0.9712772842296426!3d51.4550410796256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4874210c1a865e9d%3A0xdeb993c90f83ef8b!2sReading%20Central%20Library!5e0!3m2!1sen!2suk!4v1487178901234"
+              )
+
+      .row
+        .col-12
+          .card.card-primary.review-card
+            .card-block
+              a.btn.btn-primary.float-right(href='/location/review/new') Add review
+              h2.card-title Customer reviews
+
+              .row.review
+                .col-12.no-gutters.review-header
+                  span.rating
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.far.fa-star
+                    i.far.fa-star
+                  strong.ml-2 Simon Holmes
+                  small.text-muted.ml-2 16 February 2017
+                .col-12
+                  p What a great place. I can't say enough good things about it.
+
+              .row.review
+                .col-12.no-gutters.review-header
+                  span.rating
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.far.fa-star
+                    i.far.fa-star
+                  strong.ml-2 Charlie Chaplin
+                  small.text-muted.ml-2 14 February 2017
+                .col-12
+                  p It was okay. Coffee wasn't great, but the wifi was fast.
+
+    .col-12.col-lg-3
+      p.lead Starcups is on Srida because it has accessible wifi and space to sit down with your laptop and get some work done.
+      p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
